--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,10 @@ body {
   height: 100vh;
 }
 
+.btn:hover {
+  background-color: #045f94;
+}
+
 header {
   height: 5vh;
   text-align: center;
@@ -25,6 +29,7 @@ header .btn {
   padding: 3px 6px;
   border: none;
   height: 31px;
+  color: #fafafa;
 }
 
 .dropdown i {
@@ -56,7 +61,30 @@ header .btn {
 header img {
   height: 4vh;
   opacity: 0.5;
-  margin: -30px 50%;
+  margin-left: 20%;
+}
+
+.button-group {
+  position: absolute;
+  top: 3px;
+  right: 5px;
+}
+
+.button-group button {
+  padding: 0 10px;
+}
+
+#notification {
+  background-color: #eb5a46;
+}
+
+.user {
+  border-radius: 100%;
+}
+
+#menu {
+  position: absolute;
+  right: 5px;
 }
 
 /* Tablero */
@@ -69,22 +97,39 @@ header img {
   padding: 0px 10px 15px 0px;
 }
 
-.board-header h5, p {
-  display: inline;
+.board-header button {
+  background-color: transparent;
+  color: #fafafa;
+  font-size: 14px;
+  padding: 4px 8px;
+  margin: 0 4px;
 }
 
-.board-header i {
-  color: yellow;
-  margin: 0 10px;
+.vl {
+  border-left: 1px solid #fafafa;
+  height: 20px;
+  margin-top: 7px;
 }
 
-.board-header p {
-  border-left: 1px solid hsla(0,0%,100%,.3);
-  border-right: 1px solid hsla(0,0%,100%,.3);
-  padding: 0 15px;
+.user-board {
+  padding: 0;
+  border-radius: 100%;
+  font-size: 10px;
+  background-color: hsla(0,0%,100%,.3)!important;
 }
 
-.board-body button {
+.starBtn {
+  padding: 0;
+  font-size: 12px;
+}
+
+.private i {
+ margin-right: 5px;
+}
+
+/* Board body */
+
+.board-body .btn {
   background-color: hsla(0,0%,100%,.3);
   border: none;
   color: #fafafa;
@@ -98,20 +143,46 @@ header img {
   margin-right: 10px;
 }
 
-.formContainer {
+.formContainer, .listContainer {
   background-color: #e2e4e6;
   padding: 5px;
   border-radius: 3px;
 }
 
-.formContainer button {
+#addBtn {
   margin-top: 7px;
   background-color: #28a745;
-  width: 120px;
+  width: 100px;
   font-weight: 700;
   text-align: center;
+  padding: 8px;
 }
 
 #close {
   background-color: transparent;
+  width: 35px;
+  height: 35px;
+  font-size: 20px;
+  color: #999;
+  padding-top: 8px;
+}
+
+.listContainer {
+  color: #999;
+  padding: 0;
+}
+
+.listContainer h6 {
+  color: #333;
+  font-weight: 700;
+}
+
+#listHeader i {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+}
+
+#addTask {
+
 }
