--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,6 +128,13 @@ header img {
 }
 
 /* Board body */
+.col {
+  padding: 0 5px 0 5px;
+}
+
+#first {
+  padding-left: 10px;
+}
 
 .board-body .btn {
   background-color: hsla(0,0%,100%,.3);
@@ -169,20 +176,51 @@ header img {
 
 .listContainer {
   color: #999;
-  padding: 0;
 }
 
 .listContainer h6 {
   color: #333;
   font-weight: 700;
+  padding: 5px 8px 2px;
 }
 
 #listHeader i {
   position: absolute;
-  right: 30px;
+  right: 15px;
   top: 10px;
 }
 
 #addTask {
+  border-radius: 0 0 3px 3px;
+  color: #8c8c8c;
+  display: block;
+  flex: 0 0 auto;
+  padding: 8px 10px;
+  position: relative;
+  text-decoration: none;
+  user-select: none;
+}
 
+#taskArea {
+  border-radius: 3px;
+  border: none;
+  resize: vertical;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: 100%;
+  min-height: 50px;
+  max-height: 150px;
+  box-shadow: 3px 3px 7px -3px rgba(99,99,99,1);
+  font-size: 13px;
+}
+
+.taskName {
+  background-color: #fafafa;
+  color: #444;
+  padding: 5px 10px;
+}
+
+.taskName i {
+  float: right;
+  margin: 0;
 }
