--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,7 +160,7 @@ header img {
   padding: 8px;
 }
 
-#close {
+#close, #closeCardBtn {
   background-color: transparent;
   width: 35px;
   height: 35px;
@@ -185,7 +185,7 @@ header img {
   top: 10px;
 }
 
-#addTask {
+#addTaskBtn {
   border-radius: 0 0 3px 3px;
   color: #8c8c8c;
   display: block;
