--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,10 +2,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+input {
+  font-size: 14px;
+}
+
 .container-fluid {
   background-color: #026aa7;
   color: #fafafa;
   height: 100vh;
+  min-width: 100vw;
 }
 
 .btn:hover {
@@ -32,6 +37,7 @@ header .btn {
   color: #fafafa;
 }
 
+/*Menú tablero */
 .dropdown i {
   margin-right: 8px;
 }
@@ -39,6 +45,31 @@ header .btn {
 .input-group {
   width: 170px;
   margin-left: 98px;
+}
+
+.boards-drawer {
+  background: #fff;
+  box-shadow: 0 3px 6px rgba(0,0,0,.4);
+  border-radius: 0 3px 3px 0;
+  display: none;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  width: 280px;
+  top: 44px;
+  z-index: 60;
+}
+
+.boards-drawer input {
+  margin: 0 0 6px;
+  padding: 6px;
+  width: 98%;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  background-color: #e2e4e6;
+  border: 1px solid #cdd2d4;
+  border-radius: 3px;
+  display: block;
 }
 
 #search {
@@ -61,8 +92,9 @@ header .btn {
 header img {
   height: 4vh;
   opacity: 0.5;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  left: 50%;
+  right: 50%;
 }
 
 .button-group {
@@ -84,6 +116,10 @@ header img {
 }
 
 /* Tablero */
+.containers {
+  width: 272px;
+}
+
 .board {
   padding: 15px 0px;
   text-align: initial;
@@ -146,7 +182,7 @@ header img {
   margin-right: 10px;
 }
 
-.formContainer, .listContainer {
+.formContainer, .containers {
   background-color: #e2e4e6;
   padding: 5px;
   border-radius: 3px;
@@ -161,7 +197,7 @@ header img {
   padding: 8px;
 }
 
-#close, #close2, #closeCardBtn, #closeCardBtn2 {
+#closeBtn, #closeCardBtn {
   background-color: transparent;
   width: 35px;
   height: 35px;
@@ -170,11 +206,11 @@ header img {
   padding-top: 8px;
 }
 
-.listContainer {
+.containers {
   color: #999;
 }
 
-.listContainer h6 {
+.containers h6 {
   color: #333;
   font-weight: 700;
   padding: 5px 8px 2px;
