--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -244,7 +244,11 @@ header img {
 }
 
 .task {
-  padding: 5px;
+  padding: 0 5px;
+}
+
+.task-padding {
+  padding: 0 5px 5px 5px;
 }
 
 textarea {
